--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,7 @@ import ABOUT from '../assets/images/about.jpg'
 
 ---
 
-<MainLayout>
+<MainLayout title="About">
  <section class="container mx-auto max-w-screen-xl mt-10 px-8">
       <h1 class="text-4xl font-bold mb-5"> About TechPeople</h1>
       <div class="flex flex-col md:flex-row items-center justify-between gap-6">
