--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -2,7 +2,7 @@
 import MainLayout from "../../layouts/MainLayout.astro"
 ---
 
-<MainLayout>
+<MainLayout title="Articles">
 <h1 class="text-2xl pb-3">All Articles</h1>
       <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3">
         <div class="max-w-md mx-auto mt-10">
