--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import MainLayout from '../layouts/MainLayout.astro'
   <div class="grid grid-cols-1 gap-5 lg:grid-cols-2">
    <div>
      <h1 class="text-5xl font-bold mt-4 mb-8 leading-tight xl:text-6xl">
-       Articles, Stories & Tutorials for Tech People
+       Articles, Stories & Tutorials for Tech Enthusiasts
      </h1>
      <form id="search-form" class="flex items-center">
        <label for="search-input" class="sr-only">Search</label>
