--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -2,8 +2,8 @@
 import { getCollection } from 'astro:content';
 import type { CollectionEntry } from 'astro:content';
 
-import { formatDate } from '../../utils/formatDate';
 import MainLayout from '../../layouts/MainLayout.astro';
+import Card from '../../components/Card.astro';
 
 const articles: CollectionEntry<'articles'>[] = (
   await getCollection('articles')
@@ -16,48 +16,17 @@ const articles: CollectionEntry<'articles'>[] = (
 <MainLayout title='Articles'>
   <h1 class='text-2xl'>All Articles</h1>
   <div class='grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3'>
-    {
-      articles.map((article) => (
-        <div class='max-w-md mx-auto mt-10'>
-          <div class='bg-white rounded-lg overflow-hidden shadow-lg'>
-            <a href={`/articles/${article.slug}`}>
-              <img
-                src={`/${article.data.image}`}
-                alt={article.data.title}
-                class='w-full h-48 object-cover hover:opacity-75 transition duration-300 ease-in-out'
-              />
-            </a>
-            <div class='p-6'>
-              <h2 class='text-2xl font-semibold mb-2 line-clamp-2'>
-                <a href={`/articles/${article.slug}`}>{article.data.title}</a>
-              </h2>
-              <time class='block text-gray-400 font-serif text-sm my-2'>
-                {formatDate(article.data.pubDate)}
-              </time>
-              <p class='line-clamp-3 text-sm mb-4'>{article.data.desc}</p>
-              <div class='flex flex-wrap gap-2'>
-                {article.data.tags.map((tag: string, idx: number) => (
-                  <span
-                    class={`px-2 py-1 text-white rounded-full text-xs hover:opacity-90 ${idx % 2 === 0 ? 'bg-violet-500' : 'bg-indigo-500'}`}>
-                    <a href={`/articles/tag/${tag}`}>{tag}</a>
-                  </span>
-                ))}
-              </div>
-            </div>
-          </div>
-        </div>
-      ))
-    }
+    {articles.map((article) => <Card article={article} />)}
   </div>
   <div class='flex justify-between mt-10'>
     <a
       href=''
-      class='inline-block bg-indigo-100 px-3 py-2 hover:bg-indigo-600 hover:text-white rounded-lg'>
+      class='inline-block bg-violet-100 px-3 py-2 hover:bg-violet-500 hover:text-white rounded-lg'>
       Previous
     </a>
     <a
       href=''
-      class='inline-block bg-indigo-100 px-3 py-2 hover:bg-indigo-600 hover:text-white rounded-lg'>
+      class='inline-block bg-violet-100 px-3 py-2 hover:bg-violet-500 hover:text-white rounded-lg'>
       Next
     </a>
   </div>
