--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,10 @@
 import MainLayout from '../layouts/MainLayout.astro';
 import SearchForm from '../components/SearchForm.astro';
 
-import { recentArticle, otherArticles } from '../utils/getArticles';
+import { otherArticles, recentArticle } from '../utils/getArticles';
 import { HOMEPAGE_ARTICLE_LIMIT } from '../constants';
 import Card from '../components/Card.astro';
+import RecentArticle from '../components/RecentArticle.astro';
 ---
 
 <MainLayout>
@@ -16,35 +17,7 @@ import Card from '../components/Card.astro';
       </h1>
       <SearchForm />
     </div>
-    <div
-      class='relative inline-block w-full sm:w-auto cursor-pointer rounded-lg mt-6 lg:mt-0'>
-      <a href='article.html'>
-        <img
-          src='/blog1.png'
-          alt='Article Image'
-          class='w-full h-auto rounded-lg'
-        />
-        <div
-          class='absolute inset-0 flex flex-col items-center justify-center bg-black opacity- hover:opacity-75 transition duration-300 ease-in-out text-white text-center rounded-2xl'>
-          <div>
-            <h2 class='text-2xl font-semibold sm:text-3xl px-4'>
-              The best laptops for developers in 2024
-            </h2>
-            <p class='text-xl mt-4'>January 20, 2024</p>
-            <div class='flex mt-4 justify-center'>
-              <span
-                class='px-2 py-1 border text-white rounded-full text-xs mr-2'>
-                Tech
-              </span>
-              <span
-                class='px-2 py-1 border text-white rounded-full text-xs mr-2'>
-                Hardware
-              </span>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
+    <RecentArticle article={recentArticle} />
   </div>
   <div class='grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3'>
     {
