--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,5 +1,6 @@
 ---
 import { formatDate } from '../utils/formatDate';
+import Tags from './Tags.astro';
 
 const { article } = Astro.props;
 ---
@@ -21,16 +22,7 @@ const { article } = Astro.props;
         {formatDate(article.data.pubDate)}
       </time>
       <p class='line-clamp-3 text-sm mb-4'>{article.data.desc}</p>
-      <div class='flex flex-wrap gap-2'>
-        {
-          article.data.tags.map((tag: string, idx: number) => (
-            <span
-              class={`px-2 py-1 text-white rounded-full text-xs hover:opacity-90 ${idx % 2 === 0 ? 'bg-violet-500' : 'bg-indigo-500'}`}>
-              <a href={`/articles/tag/${tag}`}>{tag}</a>
-            </span>
-          ))
-        }
-      </div>
+      <Tags tags={article.data.tags} />
     </div>
   </div>
 </div>
