--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -37,7 +37,7 @@ const { title = 'Articles, Stories & Tutorials' } = Astro.props;
 
 <style is:global>
   ::-webkit-scrollbar {
-    @apply w-2.5 h-2.5 bg-slate-300;
+    @apply w-2.5 h-2.5 bg-transparent;
   }
 
   ::-webkit-scrollbar-track {
