--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -1,12 +1,14 @@
 ---
 import MainLayout from '../../layouts/MainLayout.astro';
 import Card from '../../components/Card.astro';
+import SearchForm from '../../components/SearchForm.astro';
 
 import { articles } from '../../utils/getArticles';
 ---
 
 <MainLayout title='Articles'>
-  <h1 class='text-2xl'>All Articles</h1>
+  <SearchForm />
+  <h1 class='text-2xl mt-8'>All Articles</h1>
   <div class='grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3'>
     {articles.map((article) => <Card article={article} />)}
   </div>
