--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -1,27 +1,32 @@
 ---
 import MainLayout from '../../layouts/MainLayout.astro';
+
 import Card from '../../components/Card.astro';
 import SearchForm from '../../components/SearchForm.astro';
+import Pagination from '../../components/Pagination.astro';
 
 import { articles } from '../../utils/getArticles';
+import { ARTICLES_PER_PAGE } from '../../constants';
+
+const currentPage: number | null = +Astro.url.searchParams.get('page')! || 1;
+const totalPages: number = Math.ceil(articles.length / ARTICLES_PER_PAGE);
+
+const articlesForPage = articles.slice(
+  (currentPage - 1) * ARTICLES_PER_PAGE,
+  currentPage * ARTICLES_PER_PAGE
+);
 ---
 
 <MainLayout title='Articles'>
   <SearchForm />
   <h1 class='text-2xl mt-8'>All Articles</h1>
   <div class='grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3'>
-    {articles.map((article) => <Card article={article} />)}
+    {articlesForPage.map((article) => <Card article={article} />)}
   </div>
-  <div class='flex justify-between mt-10'>
-    <a
-      href=''
-      class='inline-block bg-violet-100 px-3 py-2 hover:bg-violet-500 hover:text-white rounded-lg'>
-      Previous
-    </a>
-    <a
-      href=''
-      class='inline-block bg-violet-100 px-3 py-2 hover:bg-violet-500 hover:text-white rounded-lg'>
-      Next
-    </a>
-  </div>
+  <Pagination
+    currentPage={currentPage}
+    totalPages={totalPages}
+    disablePrev={currentPage === 1}
+    disableNext={currentPage === totalPages}
+  />
 </MainLayout>
